update 26-6-2026